# DiscordRPC

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/Builder/: CMakeLists.txt  main.cpp
example/FromFile/: CMakeLists.txt  example.json  main.cpp
src/: CMakeLists.txt  activity.cpp  activity.hpp  ipc.cpp  ipc.hpp
